# LLMs-From-Scratch

./: README.md  pyproject.toml
llms_implementation/: rope.py  training_utils.py
llms_implementation/deepseek3/: attention.py  deepseek3_training_example.py  model.py  moe.py  mtp.py
llms_implementation/gpt2/: attention.py  gpt2_training_example.py  model.py
llms_implementation/llama3/: attention.py  llama3_training_example.py  model.py
tests/: rope_test.py  training_utils_test.py
tests/deepseek3/: mla_test.py  model_test.py  moe_test.py  mtp_test.py
tests/gpt2/: gpt2_model_blocks_test.py  gpt2_model_test.py  mha_test.py
tests/llama3/: gqa_test.py  llama3_test.py
