[project]
name = "llms_from_scratch"
version = "0.0.1"

readme = "README.md"
      
requires-python = ">=3.11, <3.14"
dependencies = [
    "torch>=2.2.0,<2.7",
    "transformers>=4.41,<4.50",
    "datasets>=3,<4",
    "tiktoken>=0.7,<0.8",
    "tqdm>=4.66.1",
    "wandb>=0.17",
    "loguru>=0.7.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pytest",
]

[tool.setuptools]
packages = ["llms_implementation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["llms_implementation"]
